--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,16 @@
 /* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,300;0,400;0,500;0,600;0,800;1,300;1,400;1,500&display=swap');
+
+*{
+  font-family: 'Noto Sans', sans-serif;
+  font-size: 20px;
+  margin: 0;
+  padding: 0;
+}
+body{
+
+}
+
+.active{
+  border-bottom: 3px solid black;
+}
