--- a/src/app/main/blogs-page/blogs-group/blogs-group.component.scss
+++ b/src/app/main/blogs-page/blogs-group/blogs-group.component.scss
@@ -1,3 +1,28 @@
+.blog{
+  display: flex;
+  flex-direction: column;
+  .blog_inner{
+    margin-bottom: 30px;
+    padding: 15px;
+    width: 880px;
+    display: flex;
+    flex-direction: column;
+    border: 1px solid black;
+    border-radius: 15px;
+    .blog_inner_data{
+      display: flex;
+      flex-direction: row;
+      justify-content: space-between;
+      .blog_inner_log{
+        font-size: 1.2rem;
+      }
+      small{
+        font-size: 0.6rem;
+      }
+    }
+  }
+}
+
 .loading{
   z-index: -5;
   position: absolute;
