--- a/src/app/main/blogs-page/blogs-group/blogs-group.component.html
+++ b/src/app/main/blogs-page/blogs-group/blogs-group.component.html
@@ -1,12 +1,11 @@
 <div class="blog" *ngIf="blogs.length; else loading">
   <div class="blog_inner" *ngFor="let blog of blogs">
     <div class="blog_inner_data">
-      <h1 class="blog_inner_log">{{blog.name}}</h1>
+      <h1 class="blog_inner_log">{{blog.title}}</h1>
       <small>15.02.2023</small>
     </div>
 
-    <small class="blog_small">Type: {{blog.type}}</small>
-    <a [routerLink]="['/blogs', 'groups', blog.id]" class="blog_link">Read more</a>
+    <a [routerLink]="['/blogs', 'content', blog.id]" class="blog_link">Read more</a>
   </div>
 </div>
 
