--- a/src/app/main/blogs-page/blogs-page.component.scss
+++ b/src/app/main/blogs-page/blogs-page.component.scss
@@ -4,27 +4,37 @@
   align-items: flex-start;
   flex-direction: column;
   animation: open 0.7s ;
-  .blog_log{
-    font-size: 1.8rem;
-    font-weight: 500;
-  }
   .blog_log_choice{
     position: fixed;
     background-color: white;
     left: 37%;
-    width: 35%;
+    max-width: 600px;
     justify-content: space-between;
     box-shadow: 3px 10px 15px #c5bdbd;
     display: flex;
     flex-direction: row;
+    @media (max-width: 980px) {
+      left: 25%;
+    }
+    @media (max-width: 720px) {
+      max-width: 320px;
+      flex-wrap: wrap;
+      left: 15%;
+    }
     .blog_log_choice_type{
       padding: 5px 15px;
       cursor: pointer;
+      @media (max-width: 720px) {
+        margin-bottom: 15px;
+      }
     }
     .blog_log_choice_type:hover{
       background-color: #7c7b7b;
       transition: all 0.8s ease;
     }
+  }
+  .blog_content{
+    margin-top: 100px;
   }
 }
 
