--- a/src/app/main/blogs-page/share/component/blog-info/blog-info.component.html
+++ b/src/app/main/blogs-page/share/component/blog-info/blog-info.component.html
@@ -1,1 +1,16 @@
-<p>blog-info works!</p>
+<div class="blog_info" *ngIf="blog; else loading">
+  <div [routerLink]="['/blogs', 'groups']">Back</div>
+  <div class="blog_info_inner">
+    <div class="blog_info_inner_main">
+      <h1>{{blog.title |titlecase}}</h1>
+      <span>01.31.2022</span>
+    </div>
+    <div>
+      {{blog.body | titlecase}}
+    </div>
+  </div>
+</div>
+
+<ng-template #loading>
+  <img class="loading" src="./assets/spinner.gif" alt="loading">
+</ng-template>
