--- a/src/app/main/home-page/home-page.component.html
+++ b/src/app/main/home-page/home-page.component.html
@@ -1,5 +1,5 @@
 <div class="home-page">
   <app-auth-info [user]="allUserInfo"></app-auth-info>
-  <app-main-content></app-main-content>
+  <router-outlet></router-outlet>
   <app-contacts [yourContacts]="userContacts"></app-contacts>
 </div>
