--- a/src/app/main/blogs-page/share/component/image-block/image-block.component.scss
+++ b/src/app/main/blogs-page/share/component/image-block/image-block.component.scss
@@ -7,16 +7,29 @@
   right: 0;
   height: 100vh;
   background-color: rgba(34, 34, 34, 0.9);
-  .close{
-    cursor: pointer;
-    font-size: 1.5rem;
+  .image_block{
     position: relative;
-    top: 50px;
-    right: 50px;
+    justify-content: right;
+    top: 30px;
+    right: 40px;
+    align-items: center;
     display: flex;
-    justify-content: flex-end;
-    color: white;
+    flex-direction: row;
+    .image_download{
+
+      img{
+        padding-top: 10px;
+        color: white;
+      }
+    }
+    .close{
+      margin-left: 15px;
+      cursor: pointer;
+      font-size: 1.2rem;
+      color: white;
+    }
   }
+
   .image_inner{
     max-width: 65%;
     margin: 50px auto;
