--- a/src/app/main/user-account/user-account.component.html
+++ b/src/app/main/user-account/user-account.component.html
@@ -1,1 +1,42 @@
-<p>user-account works!</p>
+<div class="user" *ngIf="ourInfo;else loading">
+  <div class="user_inner">
+    <div class="user_inner_head">
+      <nav class="head_img">
+        <img src="{{ourInfo.imgCover}}" alt="">
+        <div class="head_img_me">
+          <img src="{{ourInfo.img}}" alt="{{ourInfo.name}}">
+        </div>
+      </nav>
+
+      <div class="user_info">
+        <nav class="user_info_txt">{{ourInfo.name}}</nav>
+        <div class="user_info_inner">
+          <div class="user_info_friend">
+            <nav class="user_info_friend_inner">My friends: {{myContacts.length}}</nav>
+            <div class="user_info_friend_sircle">
+              <nav class="sircle_info" *ngFor="let friends of myContacts">
+                <img src="{{friends.img}}" alt="">
+              </nav>
+            </div>
+          </div>
+          <div class="user_info_inner_edit">
+            <img src="https://static.xx.fbcdn.net/rsrc.php/v3/yW/r/OR6SzrfoMFg.png" alt="">
+            <span>Edit profile</span>
+          </div>
+        </div>
+      </div>
+      <hr>
+      <div class="user_navbar">
+        <nav class="user_navbar_inner active">My Publocation</nav>
+        <nav class="user_navbar_inner">About Me</nav>
+        <nav class="user_navbar_inner">My Friends</nav>
+        <nav class="user_navbar_inner">Photos</nav>
+        <nav class="user_navbar_inner">Music</nav>
+      </div>
+    </div>
+  </div>
+</div>
+
+<ng-template #loading>
+  <img class="loading" src="./assets/spinner.gif" alt="Loading">
+</ng-template>
