--- a/src/app/main/user-account/friends/friends.component.html
+++ b/src/app/main/user-account/friends/friends.component.html
@@ -8,7 +8,7 @@
   </div>
   <div class="friends_main">
     <div class="friends_main_navbar">
-      <nav class="friends_main_navbar_inner" [routerLink]="['/user', 'my-friends', 'all']" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">All</nav>
+      <nav class="friends_main_navbar_inner" [routerLink]="['/user', 'my-friends']" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">All</nav>
       <nav class="friends_main_navbar_inner" [routerLink]="['/user', 'my-friends', 'favourites']" routerLinkActive="active">Favorites</nav>
     </div>
     <div class="friends_main_people"><router-outlet></router-outlet></div>
