--- a/src/app/shared/component/auth-info/auth-info.component.html
+++ b/src/app/shared/component/auth-info/auth-info.component.html
@@ -7,11 +7,11 @@
     <img src="./assets/avatar.png" alt="Me">
     <span>Your name</span>
   </nav>
-  <nav class="auth-info-me">
+  <nav [routerLink]="['/blogs','people']" class="auth-info-me">
     <img src="./assets/friends.png" alt="Me">
     <span>Find friends</span>
   </nav>
-  <nav class="auth-info-me">
+  <nav [routerLink]="['/blogs']" class="auth-info-me">
     <img src="./assets/multiple-users-silhouette.png" alt="Me">
     <span>Groups</span>
   </nav>
