--- a/src/app/main/user-account/friends/favourite-friends/favourite-friends.component.html
+++ b/src/app/main/user-account/friends/favourite-friends/favourite-friends.component.html
@@ -1,5 +1,9 @@
+<div class="friends_head_search">
+  <img src="./assets/search.svg" alt="search">
+  <input placeholder="search" type="text" [(ngModel)]="search">
+</div>
 <div class="all">
-  <div class="friends_main_people_inner" *ngFor="let friend of contacts">
+  <div class="friends_main_people_inner" *ngFor="let friend of contacts|filter: search">
     <div class="people_inner_info">
       <img [ngClass]="friend.favourite == true ? 'favourite': ''" style="width: 68px; height: 68px" src="{{friend.img}}" alt="{{friend.name}}">
       <h4>{{friend.name}}
@@ -10,8 +14,8 @@
     </div>
     <div *ngIf="friend.id === showId && showMore" class="dop_inner">
       <nav (click)="remove(friend)">Delete</nav>
-      <nav (click)="unFavourites(friend)">Unfavourites</nav>
-
+      <nav (click)="unFavourites(friend)" *ngIf="friend.favourite == false; else unFavourite">To favourites</nav>
+      <ng-template #unFavourite><nav (click)="unFavourites(friend)">Unfavourites</nav></ng-template>
     </div>
   </div>
 </div>
