--- a/src/app/main/user-account/friends/all-friends/all-friends.component.scss
+++ b/src/app/main/user-account/friends/all-friends/all-friends.component.scss
@@ -1,3 +1,24 @@
+.friends_head_search{
+  background-color: #d5d4d4;
+  border-radius: 15px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  margin-bottom: 30px;
+  img{
+    background-blend-mode: color-burn;
+    width: 26px;
+    padding: 0 10px;
+  }
+  input{
+    outline: none;
+    border: 0;
+    width: 100%;
+    background-color: #d5d4d4;
+    padding: 8px;
+    border-radius: 15px;
+  }
+}
 .all{
   width: 100%;
   display: flex;
