--- a/src/app/main/user-account/friends/all-friends/all-friends.component.html
+++ b/src/app/main/user-account/friends/all-friends/all-friends.component.html
@@ -4,7 +4,7 @@
 </div>
 <div class="all">
   <div class="friends_main_people_inner" *ngFor="let friend of friends|filter: search">
-    <div class="people_inner_info">
+    <div class="people_inner_info" [routerLink]="['/user' ,'my-friends', friend.id]">
       <img [ngClass]="friend.favourite == true ? 'favourite': ''" style="width: 68px; height: 68px" src="{{friend.img}}" alt="{{friend.name}}">
       <h4>{{friend.name}}
       </h4>
