--- a/src/app/main/user-account/photos/photos.component.scss
+++ b/src/app/main/user-account/photos/photos.component.scss
@@ -1,14 +1,21 @@
-.photos {
-  font-size: 1.5rem;
-  font-weight: 600;
-}
-
-.photos_gallery {
+.photos{
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-
-  nav {
-  padding: 5px;
+  .photos_blocs{
+    padding: 5px;
+    max-width: 240px;
+    height: 240px;
+    img{
+      width: 100%;
+      height: 100%;
+    }
   }
+}
+
+
+.loading{
+  position: absolute;
+  z-index: -5;
+  left: 45%;
 }
