--- a/src/app/main/blogs-page/photos-block/photos-block.component.scss
+++ b/src/app/main/blogs-page/photos-block/photos-block.component.scss
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
+  height: 100%;
   .photos_blocs{
     padding: 5px;
     max-width: 240px;
