--- a/src/app/main/blogs-page/share/component/image-block/image-block.component.scss
+++ b/src/app/main/blogs-page/share/component/image-block/image-block.component.scss
@@ -1,17 +1,16 @@
 .image{
   position: absolute;
-  top:0;
-  z-index: 9999;
+  top: -90px;
   bottom: 0;
   left: 0;
   right: 0;
-  height: 100vh;
+  z-index: 9999;
   background-color: rgba(34, 34, 34, 0.9);
   .image_block{
-    position: relative;
+    position: sticky;
     justify-content: right;
-    top: 30px;
-    right: 40px;
+    top: 10%;
+    margin-right: 5%;
     align-items: center;
     display: flex;
     flex-direction: row;
@@ -33,7 +32,8 @@
   .image_inner{
     max-width: 65%;
     margin: 50px auto;
-    height: 65%;
+    position: sticky;
+    top: 15%;
     .image_active{
       width: 100%;
       height: 100%;
