--- a/src/app/main/user-account/photos/photos.component.scss
+++ b/src/app/main/user-account/photos/photos.component.scss
@@ -1,21 +1,51 @@
-.photos{
+.all_photo{
   display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  .photos_blocs{
-    padding: 5px;
-    max-width: 240px;
-    height: 240px;
-    img{
-      width: 100%;
-      height: 100%;
+  flex-direction: column;
+  .photos{
+    margin: 15px 0;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    height: 450px;
+    overflow-y: scroll;
+    justify-content: space-between;
+    .photos_blocs{
+      padding: 5px;
+      max-width: 400px;
+      height: 260px;
+      img{
+        width: 100%;
+        height: 100%;
+      }
     }
   }
-}
+  .photos_inner{
+    display: flex;
+    justify-content: center;
+    height: 400px;
+    img{
+      width: 100%;
+      height: auto;
+    }
+  }
+  .photo_inner_basic{
+    height: 450px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    border: 3px solid;
+    border-image-slice: 1;
+    border-image-source: linear-gradient(to left, #282538, #c41313);
+    font-size: 1.5rem;
+    font-style: italic;
+    font-weight: 600;
+  }
 
 
-.loading{
-  position: absolute;
-  z-index: -5;
-  left: 45%;
+  .loading{
+    position: absolute;
+    z-index: -5;
+    left: 45%;
+  }
 }
