--- a/src/app/main/user-account/friends/me-friend/me-friend.component.html
+++ b/src/app/main/user-account/friends/me-friend/me-friend.component.html
@@ -26,9 +26,9 @@
       </div>
       <hr>
       <div class="user_navbar">
-        <nav class="user_navbar_inner" routerLinkActive="active" [routerLink]="['/user', 'my-friends', user.id]" [routerLinkActiveOptions]="{exact: true}">My Publocation</nav>
-        <nav class="user_navbar_inner" routerLinkActive="active" [routerLink]="['/user', 'my-friends', user.id, 'about']">About Me</nav>
-        <nav class="user_navbar_inner" routerLinkActive="active" [routerLink]="['/user', 'my-friends', user.id, 'friends']">My Friends</nav>
+        <nav class="user_navbar_inner" routerLinkActive="active" [routerLink]="['/user', 'my-friends', user.id, 'blog']" [routerLinkActiveOptions]="{exact: true}">Publocation</nav>
+        <nav class="user_navbar_inner" routerLinkActive="active" [routerLink]="['/user', 'my-friends', user.id, 'about']">About</nav>
+        <nav class="user_navbar_inner" routerLinkActive="active" [routerLink]="['/user', 'my-friends', user.id, 'friends']">Friends</nav>
         <nav class="user_navbar_inner" routerLinkActive="active" [routerLink]="['/user', 'my-friends', user.id, 'photos']">Photos</nav>
         <nav class="user_navbar_inner" routerLinkActive="active" [routerLink]="['/user', 'my-friends', user.id, 'music']">Music</nav>
       </div>
