--- a/src/app/main/user-account/friends/me-friend/me-friend.component.scss
+++ b/src/app/main/user-account/friends/me-friend/me-friend.component.scss
@@ -19,7 +19,6 @@
         position: relative;
         max-width: 1280px;
         height: 360px;
-        //margin: 0 auto;
         img {
           width: 100%;
           height: 100%;
@@ -48,6 +47,7 @@
           font-size: 1.3rem ;
           width: 8%;
           cursor: pointer;
+          border: 1px solid white;
           padding: 8px;
         }
         .user_info_back:hover{
@@ -110,6 +110,7 @@
     }
   }
 }
+
 
 @keyframes open {
   from{
