--- a/src/app/shared/component/contacts/contacts.component.scss
+++ b/src/app/shared/component/contacts/contacts.component.scss
@@ -29,7 +29,9 @@
       width: 100%;
       position: relative;
       .contact_inner{
-        padding: 15px 0;
+        margin-bottom: 5px;
+        cursor: pointer;
+        padding: 10px 0;
         display: flex;
         flex-direction: row;
 
