--- a/src/app/main/user-account/user-account.component.html
+++ b/src/app/main/user-account/user-account.component.html
@@ -28,8 +28,8 @@
       </div>
       <hr>
       <div class="user_navbar">
-        <nav class="user_navbar_inner" routerLinkActive="active" [routerLink]="['/user']" [routerLinkActiveOptions]="{exact: true}">My Publocation</nav>
-        <nav class="user_navbar_inner" routerLinkActive="active" [routerLink]="['/user', 'about']">About Me</nav>
+        <nav class="user_navbar_inner" routerLinkActive="active" [routerLink]="['/user']" [routerLinkActiveOptions]="{exact: true}">About Me</nav>
+        <nav class="user_navbar_inner" routerLinkActive="active" [routerLink]="['/user', 'my-blog']">My Publocation</nav>
         <nav class="user_navbar_inner" routerLinkActive="active" [routerLink]="['/user', 'my-friends']">My Friends</nav>
         <nav class="user_navbar_inner" routerLinkActive="active" [routerLink]="['/user', 'photos']">Photos</nav>
         <nav class="user_navbar_inner" routerLinkActive="active" [routerLink]="['/user', 'music']">Music</nav>
