--- a/src/app/main/user-account/publication/publication.component.html
+++ b/src/app/main/user-account/publication/publication.component.html
@@ -1,2 +1,16 @@
-<p>publication works!</p>
-<app-help-people></app-help-people>
+<app-you-know-people></app-you-know-people>
+<div class="blog">
+  <div class="blog_inner">
+    <div *ngFor="let blog of blogs">
+      <div class="blog_id" style="background-size: cover; background: url({{blog.bgImage}})">
+        <h1 class="blog_id_title">{{blog.title}}</h1>
+        <nav  class="blog_id_more" [routerLink]="['/user', 'my-blog', blog.id]">Read more</nav>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+<router-outlet></router-outlet>
+
+
