--- a/src/app/main/user-account/user-account.component.html
+++ b/src/app/main/user-account/user-account.component.html
@@ -20,7 +20,7 @@
               </nav>
             </div>
           </div>
-          <div class="user_info_inner_edit">
+          <div class="user_info_inner_edit" [routerLink]="['/user', 'edit']">
             <img src="https://static.xx.fbcdn.net/rsrc.php/v3/yW/r/OR6SzrfoMFg.png" alt="">
             <span>Edit profile</span>
           </div>
