--- a/src/styles.scss
+++ b/src/styles.scss
@@ -23,3 +23,16 @@ app-all-friends{
 app-favourite-friends{
   width: 95%;
 }
+app-other-friends{
+  width: 100%;
+}
+
+app-edit{
+  position: fixed;
+  top: 0;
+  z-index: 99;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  background-color: rgba(255,255,255,0.8);
+}
