--- a/src/app/main/user-account/edit/edit.component.scss
+++ b/src/app/main/user-account/edit/edit.component.scss
@@ -19,37 +19,22 @@
       justify-content: space-between;
       flex-direction: row;
       align-items: center;
+      &_close{
+        cursor: pointer;
+      }
     }
     &_main{
       width: 90%;
-      margin-top: 20px;
       display: flex;
       flex-direction: column;
       justify-content: space-between;
       &_photo{
-        margin-bottom: 20px;
+        margin: 20px 0;
         display: flex;
         flex-direction: row;
         justify-content: space-between;
-        &_change {
-          position: relative;
-          overflow: hidden;
+        &_change{
           cursor: pointer;
-        }
-        &_change input[type=file]{
-          position: absolute;
-          top: 0;
-          right: 0;
-          min-width: 100%;
-          min-height: 100%;
-          font-size: 100px;
-          text-align: right;
-          filter: alpha(opacity=0);
-          opacity: 0;
-          outline: none;
-          background: white;
-          cursor: inherit;
-          display: block;
         }
       }
       &_photome{
@@ -58,7 +43,7 @@
         justify-content: center;
         nav{
           width: 180px;
-          height: auto;
+          height: 180px;
           img{
             border-radius: 50%;
             width: 100%;
@@ -66,6 +51,29 @@
           }
         }
       }
+      &_photo-cover{
+        nav{
+          width: 80%;
+          height: 190px;
+
+          margin: 0 auto;
+          img{
+            width: 100%;
+            height: 100%;
+          }
+        }
+      }
     }
   }
+}
+
+app-setting-photo{
+  position: absolute;
+  right: 30%;
+  top: 35%;
+  width: 40%;
+  max-height: 40%;
+  background: white;
+  box-shadow: 4px 1px 29px;
+  border-radius: 10px;
 }
