--- a/src/app/main/user-account/edit/edit.component.html
+++ b/src/app/main/user-account/edit/edit.component.html
@@ -49,6 +49,9 @@
       <div (click)="save()">
         Save
       </div>
+      <div [routerLink]="['/user']">
+        Compleate
+      </div>
     </div>
   </div>
 </div>
