--- a/src/app/main/user-account/user-account.component.scss
+++ b/src/app/main/user-account/user-account.component.scss
@@ -25,8 +25,8 @@
         left: 43%;
 
         img {
-          width: 170px;
-          height: auto;
+          width: 180px;
+          height: 180px;
           border-radius: 50%;
         }
       }
