--- a/src/app/shared/component/header/header.component.scss
+++ b/src/app/shared/component/header/header.component.scss
@@ -49,7 +49,9 @@
       display: flex;
 
       img {
-        width: 40px;
+        width: 45px;
+        height: 45px;
+        border-radius: 50%;
       }
     }
   }
