--- a/src/styles.scss
+++ b/src/styles.scss
@@ -36,3 +36,13 @@ app-edit{
   left: 0;
   background-color: rgba(255,255,255,0.8);
 }
+//app-about{
+//  width: 75%;
+//  margin: 0 auto;
+//  display: flex;
+//  align-items: center;
+//  justify-content: center;
+
+img{
+  object-fit: cover;
+}
